Fix PWA fullscreen view on iOS. Add safe-area to the body

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -1,3 +1,8 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 @plugin "@tailwindcss/typography";
-@import '@nuxt/ui';
+@import "@nuxt/ui";
+
+body {
+    padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
+        env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
+}
